# Django_Template

./: README.md  pyproject.toml  requirements.txt
core/: settings.py
